src/gui/text/qtextengine.cpp
@@ -2698,13 +2698,7 @@ QFixed QTextEngine::leadingSpaceWidth(const QScriptLine &line)
         || !isRightToLeft())
         return QFixed();
 
-    int pos = line.length;
-    const HB_CharAttributes *attributes = this->attributes();
-    if (!attributes)
-        return QFixed();
-    while (pos > 0 && attributes[line.from + pos - 1].whiteSpace)
-        --pos;
-    return width(line.from + pos, line.length - pos);
+    return width(line.from + line.length, line.trailingSpaces);
 }
 
 QFixed QTextEngine::alignLine(const QScriptLine &line)
@@ -2714,14 +2708,12 @@ QFixed QTextEngine::alignLine(const QScriptLine &line)
     // if width is QFIXED_MAX that means we used setNumColumns() and that implicitly makes this line left aligned.
     if (!line.justified && line.width != QFIXED_MAX) {
         int align = option.alignment();
-        if (align & Qt::AlignLeft)
-            x -= leadingSpaceWidth(line);
         if (align & Qt::AlignJustify && isRightToLeft())
             align = Qt::AlignRight;
         if (align & Qt::AlignRight)
-            x = line.width - (line.textAdvance + leadingSpaceWidth(line));
+            x = line.width - (line.textAdvance);
         else if (align & Qt::AlignHCenter)
-            x = (line.width - line.textAdvance)/2 - leadingSpaceWidth(line);
+            x = (line.width - line.textAdvance)/2;
     }
     return x;
 }
